--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,13 @@
 h1{
   margin: 5px;
   margin-right: 35px;
-  font-size: 23px;
+  font-size: 21.5px;
 }
 body{
   background-color: #29C7D7;
 }
 .heading{
-  font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   border-bottom: 5px solid black;
   padding: 5px;
   background-color: pink;
@@ -380,12 +380,12 @@ transform: scale(1.2);
  .titleNoteMenu{
   font-size: 16px;
   text-align: center;
-  font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .titleNote, .tableNote{
   font-size: 16px;
   text-align: center;
-  font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 5px;
 }
 .buttonNote, .buttonNoteTwo, .buttonNoteThree{
@@ -417,11 +417,11 @@ display:none;
   float:right;
   cursor:pointer;
   padding-right:6px;
-    font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 #popup, #popupTwo, #popupThree, #popupPaint, #popupNotes, #popupGame{
   display:none;
-    font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   /* background-color: #C3BBAE; */
   background-color: white;
   position:absolute;
@@ -437,7 +437,7 @@ display:none;
   border:2px solid black;
 }
 #popup_bar, #popup_barTwo, #popup_barThree, #popup_barPaint, #popup_barNotes, #popup_barGame{
-    font-family: 'campton-bolddemo', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   width:100%;
   /* background-color: #874F52; */
   background-color: pink;
@@ -752,7 +752,11 @@ a:visited{
 .aboutIphone, .projectsIphone, .curositiesIphone,.homeIphone{
   display: none;
 }
-@media screen and (max-width: 500px){
+@media only screen
+  and (min-width: 1024px)
+  and (max-height: 1366px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1.5) {
   .aboutAll, .projectsAll, .curositiesAll, .notesAll, .paintTotal, .table, #allMail{
     display: none;
   }
