--- a/styles.css
+++ b/styles.css
@@ -1,782 +1,42 @@
-*{
-  margin:0px;
-  padding:0px;
-  box-sizing: border-box;
-}*
 
-.me{
-  width: 50px;
-  height: 45px;
+.profile{
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
-  border: 2px solid black;
-  margin: 5px;
-  cursor: pointer;
-}
-@font-face {
-    font-family: 'campton-bolddemo';
-    src: url('campton-bolddemo-webfont.woff2') format('woff2'),
-         url('campton-bolddemo-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  object-fit: cover;
+  box-shadow: 2px 2px 4px grey;
 }
 h1{
-  margin: 5px;
-  margin-right: 35px;
-  font-size: 21.5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+.sign{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10%;
 }
 body{
   background-color: #29C7D7;
 }
-.heading{
-  font-family: 'Poppins', sans-serif;
-  border-bottom: 5px solid black;
-  padding: 5px;
-  background-color: pink;
-  display: flex;
- align-items: center;
+.pass{
+  width: 200px;
+  height: 20px;
 }
-.spaceRight{
-  position: absolute;
-  right:150px;
+.back{
+  width: 35px;
+  height: 35px;
+  margin-top: 10px;
 }
-/* aboutFolder */
-.phoebeImage{
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  margin-left: 20px;
-  margin-top: 20px;
-  border-radius: 50%;
-  border: 5px solid #ffc87e;
-}
-.lineAbout{
-  border-color: #ffc87e;
-  border-width: 2px;
-  width: 400px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  text-align: center;
-}
-.flexTitle{
-  display:flex;
-  justify-content: space-around;
-}
-.lineFlex{
-  display:flex;
-  justify-content: center;
-}
-.nameFlex{
+.hide{
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
-}
-.descriptions{
-  font-size: 15px;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  margin-top: 10px;
-  width: 300px;
-}
-.nameText{
-  font-family: 'Lexend Exa', sans-serif;
-  text-align: center;
-  font-size: 18px;
-  padding: 0;
-}
-.leftArrow, .rightArrow{
-  width: 50px;
-  height: 40px;
-  object-fit: cover;
-}
-.arrows{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-.firstPage{
-  visibility: visible;
-}
-.secPage, .thirdPage{
-  visibility: hidden;
-  position: absolute;
-  top: 10%;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  margin-left: 46px;
-  margin-top: 20px;
-}
-.picsPage{
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  margin-right: 30px;
-  border-radius: 50%;
-  border: 5px solid #ffc87e;
-}
-#maraText{
-  visibility: hidden;
-  position: absolute;
-  top: 10%;
-}
-#trackText{
-  visibility: hidden;
-  position: absolute;
-  top: 5%;
-}
-#yeaText{
-  visibility: hidden;
-  position: absolute;
-  top: 5%;
-}
-/* ABOUT FOLDER END */
-.IG{
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  right: 130px;
-  cursor:pointer;
-}
-.mailIcon{
-  width: 20px;
-  height: 15px;
-  padding: 0.2px;
-  position: absolute;
-  right: 103px;
-  cursor:pointer;
-}
-#clock{
-  position: absolute;
-  right: 25px;
-}
-.table{
-  width: 700px;
-  height: 50px;
-  position: absolute;
-  left: 23%;
-  bottom: 3%;
-  cursor: default;
-}
-.mail, #allMail{
-  width: 100px;
-  height: 60px;
-  position: absolute;
-  left: 28%;
-  bottom: 5%;
-  background-color: Transparent;
-  border-color: transparent;
-  font-family: 'Lexend Exa', sans-serif;
-  /* font-family: 'Open Sans', sans-serif; */
-}
-.paint, #allPaint{
-  width: 70px;
-  height: 90px;
-  position: absolute;
-  left: 40%;
-  bottom: 5%;
-  background-color: Transparent;
-  border-color: transparent;
-  font-family: 'Lexend Exa', sans-serif;
-  /* font-family: 'Open Sans', sans-serif; */
-}
-.notes, #allNotes{
-  width: 70px;
-  height: 80px;
-  position: absolute;
-  left: 50%;
-  bottom: 5%;
-  background-color: Transparent;
-  border-color: transparent;
-  /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'Lexend Exa', sans-serif;
-}
-.game, #allGame{
-  width: 80px;
-  height: 70px;
-  /* position: absolute;
-  left: 60%;
-  bottom: 5%; */
-  background-color: Transparent;
-  border-color: transparent;
-  /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'Lexend Exa', sans-serif;
-}
-/* PROJECT FOLDER BEGIN */
-.pseudo{
-  width: 60px;
-  height: 60px;
-  margin-bottom: 5px;
-  object-fit: cover;
-  position: absolute;
-  top: 60px;
-  left: 70px;
-}
-.pseudo:hover, .justCode:hover, .redesign:hover{
-transform: scale(1.2);
-}
-.pseudoText{
-  font-size: 12px;
-  margin-top: 8px;
-  position: absolute;
-  top: 130px;
-  left: 70px;
-  font-family: 'Lexend Exa', sans-serif;
-  /* font-family: 'Open Sans', sans-serif; */
-}
-.justCode{
-  width: 70px;
-  height: 70px;
-  margin-bottom: 5px;
-  object-fit: cover;
-  position: absolute;
-  top: 60px;
-  left: 220px;
-}
-.justCodeText{
-  width: 70px;
-  height: 70px;
-  text-align: center;
-  font-size: 12px;
-  margin-top: 8px;
-  position: absolute;
-  top: 130px;
-  left: 220px;
-  font-family: 'Lexend Exa', sans-serif;
-}
-.redesign{
-  width: 70px;
-  height: 70px;
-  margin-bottom: 5px;
-  object-fit: cover;
-  position: absolute;
-  top: 60px;
-  left: 380px;
-}
-.redesignText{
-  width: 70px;
-  height: 70px;
-  text-align: center;
-  font-size: 12px;
-  margin-top: 8px;
-  position: absolute;
-  top: 130px;
-  left: 370px;
-  font-family: 'Lexend Exa', sans-serif;
-}
-.redesignPage, .justCodePage, .pseudoPage{
-  visibility: hidden;
-}
-.projectTitle{
-  position: absolute;
-  top: 35px;
-  left: 145px;
-}
-.projectTitleF{
-  position: absolute;
-  top: 35px;
-  left: 200px;
-}
-.projectPara{
-  position: absolute;
-  top: 75px;
-  left: 115px;
-  width: 300px;
-  text-align: center;
-}
-.proText{
-    font-family: 'Lexend Exa', sans-serif;
-    position: absolute;
-    top: 120px;
-    left: 10px;
-    font-size: 20px;
-}
-/* .proTextTwo{
-
-} */
-.backProject{
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 35px;
-  left: 10px;
-}
-/* PROJECT FOLDER END */
-/* Curosities Page START*/
-.curosPageOne{
-  position: absolute;
-  top: 10%;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  margin-left: 46px;
-  margin-top: 20px;
-}
-/* Curosities Page END */
-.chooseNote{
-  height: 100%;
-  width: 200px;
-  border-right: 2px solid black;
-  text-align: center;
-}
-.textNotes{
-  height: 466px;
-  width: 400px;
-}
-.noteLine{
-  border-color: black;
-  border-width: 1px;
-  /* margin-top: 10px;
-  margin-bottom: 10px; */
-}
-.lineTitle{
-  border-color: #ffc87e;
-  border-width: 1.5px;
-  width: 200px;
-  margin: 10px;
-}
-.lineTitleTwo{
-  border-color: #ffc87e;
-  border-width: 1.5px;
-  width: 130px;
-  margin: 10px;
-}
-.flexLine{
-  display: flex;
   justify-content: center;
-}
-.flexNotes{
-  display: flex;
-  flex-direction: row;
-}
-.noteSubTextMenu{
-  font-size: 15px;
-    font-family: 'Lexend Exa', sans-serif;
-    text-align: center;
-}
-.noteSubTitle{
-  font-size: 16px;
-    font-family: 'Lexend Exa', sans-serif;
-    text-align: center;
-}
-.noteSubText{
-  font-size: 13px;
-    font-family: 'Lexend Exa', sans-serif;
-    margin: 10px;
-    text-align: center;
-}
-.cuteGIF, .cuteGIFS{
-  margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
-  width: 150px;
-  height: 150px;
-  border: 5px solid black;
-  object-fit: cover;
-}
-.flexGIF{
-  display: flex;
-  justify-content: center;
-}
- .titleNoteMenu{
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-}
-.titleNote, .tableNote{
-  font-size: 16px;
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-  margin: 5px;
-}
-.buttonNote, .buttonNoteTwo, .buttonNoteThree{
-  border-color: Transparent;
-  background-color: transparent;
-  width: 200px;
-  height: 70px;
-}
-.buttonNote:hover, .buttonNoteTwo:hover, .buttonNoteThree:hover{
-  background-color: #ffc87e;
-  border-right: 2px solid black;
-}
-button:focus {
-  outline:0;
+  align-items: center;
+  visibility: hidden;
 }
 input:focus{
-  outline:0;
-}
-#smoke, #smokeTwo, #smokeThree, #smokePaint, #smokeNotes, #smokeGame{
-display:none;
-  position:absolute;
-  top:-30px;
-  left:-30px;
-  /* opacity:0.3;
-  background-color:black; */
-  z-index:9998;
-}
-#btn_close, #btn_closeTwo, #btn_closeThree, #btn_closePaint, #btn_closeNotes, #btn_closeGame{
-  float:right;
-  cursor:pointer;
-  padding-right:6px;
-  font-family: 'Poppins', sans-serif;
-}
-#popup, #popupTwo, #popupThree, #popupPaint, #popupNotes, #popupGame{
-  display:none;
-  font-family: 'Poppins', sans-serif;
-  /* background-color: #C3BBAE; */
-  background-color: white;
-  position:absolute;
-  overflow-y:scroll;
-  width: 200px;
-  height: 200px;
-  top:0px;
-  z-index:9999;
-  /* box-shadow: 6px 6px 5px #888888; */
-  box-shadow: 6px 6px 5px #874F52;
-  /* box-shadow: 6px 6px 5px pink; */
-  border-radius:6px;
-  border:2px solid black;
-}
-#popup_bar, #popup_barTwo, #popup_barThree, #popup_barPaint, #popup_barNotes, #popup_barGame{
-  font-family: 'Poppins', sans-serif;
-  width:100%;
-  /* background-color: #874F52; */
-  background-color: pink;
-  position:relative;
-  top:0;
-  border-bottom: 2px solid black;
-  /* border-radius:6px 6px 0 0; */
-  text-align:center;
-  font-size: 20px;
-  height:30px;
-  cursor:move;
-}
-#btn_popup, #btn_popupTwo, #btn_popupThree, #allPaint, #allNotes, #allGame{
-    cursor:pointer;
-      z-index: 9;
-    position: absolute;
-    font-size: 20px;
-}
-#mydiv{
-  position: absolute;
-  z-index: 9;
- text-align: center;
-  font-size: 20px;
-}
-#mydivTwo{
- position: absolute;
-  left: 20%;
- z-index: 9;
- text-align: center;
- font-size: 20px;
-}
-#mydivThree{
-  position: absolute;
-   left: 40%;
-  z-index: 9;
-  text-align: center;
-  font-size: 20px;
-}
-p{
-  margin: 0px;
-  font-size: 13px;
-}
-.aboutText{
-  padding: 200px;
-  text-align: center;
-  font-family: 'Lexend Exa', sans-serif;
-  /* font-family: 'Open Sans', sans-serif; */
-  font-size: 20px;
-}
-a:link{
-  text-decoration: none;
-  color: black;
-}
-a:visited{
-  text-decoration: none;
-  color: black;
-}
-
-.about, .projects, .curosities{
-  width: 160px;
-  height: 120px;
-}
-
-#btn_popup, #btn_popupTwo, #btn_popupThree{
-  background-color: transparent;
-  border-color: transparent;
-  font-family: 'Lexend Exa', sans-serif;
-}
-.backgroundPopText{
-    font-size: 18px;
-}
-.subText{
-  font-family: 'Lexend Exa', sans-serif;
-
-  text-align: center;
-  font-size: 18px;
-  margin: 5px;
-}
-.white, .whiteH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: white;
-  padding: 3px;
-}
-.teal, .tealH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: #29C7D7;
-  padding: 3px;
-}
-.spicyMix, .spicyMixH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: #874F52;
-  padding: 3px;
-}
-.purple, .purpleH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: #A491D3;
-  padding: 3px;
-}
-.customPic{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: #C3BBAE;
-  object-fit: cover;
-}
-.pink, .pinkH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: pink;
-  padding: 5px;
-}
-.yellowH{
-  border: 3px solid black;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  background-color: #ffc87e;
-  padding: 5px;
-}
-.switchColor, .switchColorTwo, .switchHead, .switchHeadTwo{
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 10px;
-}
-.switchColorTwo{
-  margin-bottom: 20px;
-}
-.line{
-  border-color: #ffc87e;
-  border-width: 2px;
-  width: 200px;
-  margin-left:10%;
-  margin-top: 20px;
-  text-align: center;
-}
-
-[data-tooltip] {
-  position: relative;
-  z-index: 2;
-  cursor: pointer;
-}
-
-/* Hide the tooltip content by default */
-[data-tooltip]:before,
-[data-tooltip]:after {
-  visibility: hidden;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  pointer-events: none;
-}
-
-
-/* Position tooltip above the element */
-[data-tooltip]:before {
-  position: absolute;
-  bottom: 110%;
-  left: 80%;
-  margin-bottom: 5px;
-  margin-left: -80px;
-  padding: 7px;
-  width: 160px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: white;
-  /* background-color: hsla(0, 0%, 20%, 0.9); */
-  color: black;
-  content: attr(data-tooltip);
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.2;
-}
-
-/* Triangle hack to make tooltip look like a speech bubble */
-[data-tooltip]:after {
-  position: absolute;
-  bottom: 110%;
-  left: 80%;
-  margin-left: -5px;
-  width: 0;
-  border-top: 5px solid white;
-  /* border-top: 5px solid hsla(0, 0%, 20%, 0.9); */
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-  content: " ";
-  font-size: 0;
-  line-height: 0;
-}
-#allPaint:before{
-  position: absolute;
-  bottom: 110%;
-  left: 90%;
-  margin-bottom: 5px;
-  margin-left: -80px;
-  padding: 7px;
-  width: 160px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: white;
-  /* background-color: hsla(0, 0%, 20%, 0.9); */
-  color: black;
-  content: attr(data-tooltip);
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.2;
-}
-#allPaint:after{
-  position: absolute;
-  bottom: 110%;
-  left: 90%;
-  margin-left: -5px;
-  width: 0;
-  border-top: 5px solid white;
-  /* border-top: 5px solid hsla(0, 0%, 20%, 0.9); */
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-  content: " ";
-  font-size: 0;
-  line-height: 0;
-}
-#allNotes:before{
-  position: absolute;
-  bottom: 110%;
-  left: 90%;
-  margin-bottom: 5px;
-  margin-left: -80px;
-  padding: 7px;
-  width: 160px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: white;
-  /* background-color: hsla(0, 0%, 20%, 0.9); */
-  color: black;
-  content: attr(data-tooltip);
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.2;
-}
-#allNotes:after{
-  position: absolute;
-  bottom: 110%;
-  left: 90%;
-  margin-left: -5px;
-  width: 0;
-  border-top: 5px solid white;
-  /* border-top: 5px solid hsla(0, 0%, 20%, 0.9); */
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-  content: " ";
-  font-size: 0;
-  line-height: 0;
-}
-#allGame:before {
-  position: absolute;
-  bottom: 110%;
-  left: 110%;
-  margin-bottom: 5px;
-  margin-left: -80px;
-  padding: 7px;
-  width: 160px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: white;
-  /* background-color: hsla(0, 0%, 20%, 0.9); */
-  color: black;
-  content: attr(data-tooltip);
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.2;
-}
-#allGame:after{
-  position: absolute;
-  bottom: 110%;
-  left: 110%;
-  margin-left: -5px;
-  width: 0;
-  border-top: 5px solid white;
-  /* border-top: 5px solid hsla(0, 0%, 20%, 0.9); */
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-  content: " ";
-  font-size: 0;
-  line-height: 0;
-}
-/* Show tooltip content on hover */
-[data-tooltip]:hover:before,
-[data-tooltip]:hover:after {
-  visibility: visible;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-.aboutIphone, .projectsIphone, .curositiesIphone,.homeIphone{
-  display: none;
-}
-@media only screen
-  and (min-width: 1024px)
-  and (max-height: 1366px)
-  and (orientation: portrait)
-  and (-webkit-min-device-pixel-ratio: 1.5) {
-  .aboutAll, .projectsAll, .curositiesAll, .notesAll, .paintTotal, .table, #allMail{
-    display: none;
-  }
-  .aboutIphone, .projectsIphone, .curositiesIphone{
-    display: inline;
-    background-color: Transparent;
-    border-color: transparent;
-  }
-  .aboutP, .curositiesP, .projectsP{
-    width: 160px;
-    height: 120px;
-  }
-  .homeIphone{
-    display: inline;
-    position: absolute;
-    bottom: 10px;
-    left: 43%;
-  }
-  .home{
-    width: 90px;
-    height: 87px;
-  }
+  outline: 0;
 }
