--- a/home.css
+++ b/home.css
@@ -178,7 +178,7 @@ body{
   right: 25px;
 }
 .table{
-  width: 700px;
+  width: 50%;
   height: 50px;
   position: absolute;
   left: 23%;
@@ -307,16 +307,47 @@ transform: scale(1.2);
 .projectPara{
   position: absolute;
   top: 75px;
-  left: 115px;
+  left: 105px;
   width: 300px;
   text-align: center;
 }
 .proText{
     font-family: 'Lexend Exa', sans-serif;
     position: absolute;
-    top: 120px;
-    left: 10px;
+    top: 40%;
+    right: 60px;
     font-size: 20px;
+}
+.proTextSub{
+  font-family: 'Lexend Exa', sans-serif;
+  position: absolute;
+  top: 48%;
+  right: 30px;
+  font-size: 12px;
+  width: 240px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.justCodeBut{
+  position: absolute;
+  top: 100%;
+  left: 40%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.logoJustCode{
+  position: absolute;
+  top: 43%;
+  left: 20px;
+  width: 220px;
+  height: 200px;
 }
 /* .proTextTwo{
 
