--- a/home.css
+++ b/home.css
@@ -142,7 +142,7 @@ body{
   font-size: 18px;
   padding: 0;
 }
-.leftArrow, .rightArrow{
+.leftArrow, .rightArrow, .leftArrowC, .rightArrowC{
   width: 80px;
   height: 50px;
 }
@@ -179,6 +179,7 @@ body{
   left: 30%;
   width: 300px;
   font-size: 20px;
+  font-family: 'Lexend Exa', sans-serif;
 }
 #trackText{
   visibility: hidden;
@@ -292,7 +293,7 @@ body{
   top: 70px;
   left: 65px;
 }
-.pseudo:hover, .justCode:hover, .redesign:hover, .lucy:hover, .shetem:hover{
+.pseudo:hover, .justCode:hover, .redesign:hover, .shetem:hover, .lucy:hover, .SDG:hover, .techMag:hover{
 transform: scale(1.2);
 }
 .pseudoText{
@@ -342,24 +343,6 @@ transform: scale(1.2);
   left: 370px;
   font-family: 'Lexend Exa', sans-serif;
 }
-.lucy{
-  width: 55px;
-  height: 70px;
-  margin-bottom: 5px;
-  /* object-fit: cover; */
-  position: absolute;
-  top: 57%;
-  left: 70px;
-}
-.lucyText{
-  text-align: center;
-  font-size: 12px;
-  margin-top: 8px;
-  position: absolute;
-  top: 77%;
-  left: 54px;
-  font-family: 'Lexend Exa', sans-serif;
-}
 .shetem{
   width: 55px;
   height: 55px;
@@ -378,7 +361,25 @@ transform: scale(1.2);
   left: 220px;
   font-family: 'Lexend Exa', sans-serif;
 }
-.redesignPage, .justCodePage, .pseudoPage, .lucyPage, .shetemPage{
+.techMag{
+  width: 55px;
+  height: 55px;
+  margin-bottom: 5px;
+  /* object-fit: cover; */
+  position: absolute;
+  top: 57%;
+  left: 70px;
+}
+.techMagText{
+  text-align: center;
+  font-size: 12px;
+  margin-top: 8px;
+  position: absolute;
+  top: 77%;
+  left: 50px;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.redesignPage, .justCodePage, .pseudoPage, .shetemPage, .techMagPage{
   visibility: hidden;
 }
 .projectTitle{
@@ -468,13 +469,6 @@ transform: scale(1.2);
   width: 220px;
   height: 200px;
 }
-.logoLucy{
-  width: 160px;
-  height: 200px;
-  position: absolute;
-  top:40%;
-  left: 20px;
-}
 .backProject{
   width: 43px;
   height: 30px;
@@ -490,16 +484,91 @@ transform: scale(1.2);
   font-size: 20px;
   text-align: center;
 }
+.lucy{
+  position: absolute;
+  top: 120%;
+  left: 100px;
+  width: 55px;
+  height: 80px;
+}
+.exLucy{
+  position: absolute;
+  top: 143%;
+  left: 90px;
+  text-align: center;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.SDG{
+  position: absolute;
+  top: 125%;
+  right: 100px;
+  width: 55px;
+  height: 55px;
+}
+.exSDG{
+  position: absolute;
+  top: 143%;
+  right: 80px;
+  text-align: center;
+  font-family: 'Lexend Exa', sans-serif;
+}
 /* PROJECT FOLDER END */
+
 /* Curosities Page START*/
 .curosPageOne{
   position: absolute;
-  top: 10%;
+  top: 6%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   margin-left: 46px;
   margin-top: 20px;
+}
+.curosPageTwo{
+  visibility: hidden;
+  position: absolute;
+  top: 6%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  margin-left: 46px;
+  margin-top: 20px;
+}
+.curioText{
+  font-size: 15px;
+  text-align: center;
+  margin-left: -30px;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.curioWhy{
+  font-size: 20px;
+  text-align: center;
+  position: absolute;
+  top: 57%;
+  left: 46%;
+}
+.curioAnswer{
+  font-size: 16px;
+  font-family: 'Lexend Exa', sans-serif;
+  text-align: center;
+  position: absolute;
+  top: 64%;
+  left: 25%;
+}
+.lineFlexC{
+  position: absolute;
+  top: 78%;
+  left: 100px;
+}
+.leftArrowC{
+  position: absolute;
+  top: 87%;
+  left: 20%;
+}
+.rightArrowC{
+  position: absolute;
+  top: 87%;
+  right: 20%;
 }
 /* Curosities Page END */
 .chooseNote{
@@ -578,13 +647,13 @@ transform: scale(1.2);
   font-family: 'Poppins', sans-serif;
   margin: 5px;
 }
-.buttonNote, .buttonNoteTwo, .buttonNoteThree{
+.buttonNote, .buttonNoteTwo, .buttonNoteThree, .buttonNoteFour{
   border-color: Transparent;
   background-color: transparent;
   width: 200px;
   height: 70px;
 }
-.buttonNote:hover, .buttonNoteTwo:hover, .buttonNoteThree:hover{
+.buttonNote:hover, .buttonNoteTwo:hover, .buttonNoteThree:hover, .buttonNoteFour:hover{
   background-color: #ffc87e;
   border-right: 2px solid black;
 }
@@ -754,7 +823,7 @@ a:visited{
   background-color: pink;
   padding: 5px;
 }
-.yellowH{
+.yellowH, .yellow{
   border: 3px solid black;
   text-align: center;
   width: 40px;
