--- a/home.css
+++ b/home.css
@@ -303,7 +303,21 @@ body{
 .pseudoBut{
   position: absolute;
   top: 132%;
-  left: 40%;
+  left: 15%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.pseudoButTwo{
+  position: absolute;
+  top: 132%;
+  right: 20%;
   width: 90px;
   height: 40px;
   text-align: center;
@@ -427,6 +441,34 @@ transform: scale(1.2);
   left: 20px;
   width: 200px;
   height: 240px;
+}
+.techBut{
+  position: absolute;
+  top: 105%;
+  right: 20%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.techButTwo{
+  position: absolute;
+  top: 120%;
+  right: 20%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .redesignPage, .justCodePage, .pseudoPage, .shetemPage, .techMagPage{
   visibility: hidden;
