--- a/home.css
+++ b/home.css
@@ -906,6 +906,16 @@ display:none;
   text-align: center;
   font-size: 20px;
 }
+.directionArr{
+  position: absolute;
+   left: 55%;
+   margin-top: 30px;
+   width: 450px;
+   height: 200px;
+  z-index: 9;
+  text-align: center;
+  font-size: 20px;
+}
 p{
   margin: 0px;
   font-size: 13px;
