--- a/home.css
+++ b/home.css
@@ -332,7 +332,7 @@ body{
 transform: scale(1.2);
 }
 
-.justCodeBut:hover, .redesignBut:hover{
+.justCodeBut:hover, .redesignBut:hover, .techButTwo:hover, .techBut:hover, .techButShe:hover, .techButSheTwo:hover{
     /* background-color: #ffc87e; */
       border: 2px solid #ffc87e;
       color: #ffc87e;
@@ -400,13 +400,13 @@ transform: scale(1.2);
   margin-bottom: 20px;
 }
 .shetem{
-  width: 55px;
-  height: 55px;
+  width: 90px;
+  height: 90px;
   margin-bottom: 5px;
   /* object-fit: cover; */
   position: absolute;
   top: 57%;
-  left: 220px;
+  left: 210px;
 }
 .shetemText{
   text-align: center;
@@ -416,6 +416,34 @@ transform: scale(1.2);
   top: 77%;
   left: 220px;
   font-family: 'Lexend Exa', sans-serif;
+}
+.techButShe{
+  position: absolute;
+  top: 135%;
+  right: 5%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.techButSheTwo{
+  position: absolute;
+  top: 135%;
+  right: 30%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .techMag{
   width: 55px;
@@ -510,6 +538,11 @@ transform: scale(1.2);
   top: 35px;
   left: 138px;
 }
+.projectTitleA{
+  position: absolute;
+  top: 35px;
+  left: 170px;
+}
 .projectPara{
   position: absolute;
   top: 75px;
@@ -566,6 +599,14 @@ transform: scale(1.2);
   position: absolute;
   top: 105%;
   right: 30px;
+  font-size: 20px;
+  text-align: center;
+}
+.proTextThreeH{
+  font-family: 'Lexend Exa', sans-serif;
+  position: absolute;
+  top: 105%;
+  right: 75px;
   font-size: 20px;
   text-align: center;
 }
@@ -1194,7 +1235,7 @@ a:visited{
   display: none;
 }
 @media only screen and (min-width: 414px) and (orientation:portrait){
-  .aboutAll, .projectsAll, .curositiesAll, .notesAll, .paintTotal, .table, #allMail{
+  .aboutAll, .projectsAll, .curositiesAll, .notesAll, .paintTotal, .table, #allMail, .directionArr{
     display: none;
   }
   .aboutIphone, .projectsIphone, .curositiesIphone{
