--- a/home.css
+++ b/home.css
@@ -302,7 +302,7 @@ body{
 }
 .pseudoBut{
   position: absolute;
-  top: 132%;
+  top: 134%;
   left: 15%;
   width: 90px;
   height: 40px;
@@ -313,16 +313,19 @@ body{
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
+
 }
 .pseudoButTwo{
   position: absolute;
-  top: 132%;
+  top: 134%;
   right: 20%;
   width: 90px;
   height: 40px;
   text-align: center;
   font-size: 12px;
   border-radius: 50%;
+  background-color: transparent;
   font-family: 'Poppins', sans-serif;
   border: 2px solid black;
   margin-top: 20px;
@@ -332,7 +335,7 @@ body{
 transform: scale(1.2);
 }
 
-.justCodeBut:hover, .redesignBut:hover, .techButTwo:hover, .techBut:hover, .techButShe:hover, .techButSheTwo:hover{
+.justCodeBut:hover, .redesignBut:hover, .techButTwo:hover, .techBut:hover, .techButShe:hover, .techButSheTwo:hover, .pseudoBut:hover, .pseudoButTwo:hover{
     /* background-color: #ffc87e; */
       border: 2px solid #ffc87e;
       color: #ffc87e;
@@ -398,6 +401,7 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
 }
 .shetem{
   width: 90px;
@@ -430,6 +434,7 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
 }
 .techButSheTwo{
   position: absolute;
@@ -444,6 +449,8 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
+
 }
 .techMag{
   width: 55px;
@@ -483,6 +490,8 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
+
 }
 .techButTwo{
   position: absolute;
@@ -497,6 +506,8 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
+
 }
 .azn{
   width: 65px;
@@ -623,6 +634,8 @@ transform: scale(1.2);
   border: 2px solid black;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: transparent;
+
 }
 .logoJustCode{
   position: absolute;
