--- a/home.css
+++ b/home.css
@@ -1067,6 +1067,17 @@ display:none;
   font-size: 20px;
   visibility: visible;
 }
+.scrollArr{
+  position: absolute;
+   right: 6%;
+   margin-top: 30px;
+   width: 300px;
+   height: 230px;
+  z-index: 9;
+  text-align: center;
+  font-size: 20px;
+  visibility: hidden;
+}
 p{
   margin: 0px;
   font-size: 13px;
